--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:marokanu/sfg-pet-clinic.git</developerConnection>
-      <tag>sfg-pet-clinic-0.0.5</tag>
+        <tag>HEAD</tag>
   </scm>
 
 </project>
