--- a/release.properties
+++ b/release.properties
@@ -1,9 +1,9 @@
 #release configuration
-#Thu Jan 27 11:36:15 EET 2022
+#Thu Jan 27 11:37:33 EET 2022
 projectVersionPolicyId=default
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 project.scm.guru.springframework\:pet-clinic-data.empty=true
-project.scm.guru.springframework\:sfg-pet-clinic.tag=HEAD
+project.scm.guru.springframework\:sfg-pet-clinic.tag=sfg-pet-clinic-0.0.5
 pinExternals=false
 project.rel.guru.springframework\:pet-clinic-web=0.0.5
 pushChanges=true
@@ -14,9 +14,9 @@ project.dev.guru.springframework\:pet-clinic-web=0.0.6-SNAPSHOT
 project.dev.guru.springframework\:pet-clinic-data=0.0.6-SNAPSHOT
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
-scm.commentPrefix=[maven-release-plugin] 
+scm.commentPrefix=[maven-release-plugin]
 releaseStrategyId=default
-completedPhase=run-preparation-goals
+completedPhase=scm-commit-release
 scm.url=scm\:git\:git@github.com\:marokanu/sfg-pet-clinic.git
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
