--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.5</version>
     <name>sfg-pet-clinic</name>
     <description>sfg-pet-clinic</description>
     <properties>
@@ -50,6 +50,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:marokanu/sfg-pet-clinic.git</developerConnection>
+    <tag>sfg-pet-clinic-0.0.5</tag>
   </scm>
 
 </project>
