--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.5-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>sfg-pet-clinic</description>
     <properties>
@@ -52,7 +52,6 @@
         <connection>scm:git:https://github.com/mojohaus/PLUGIN_NAME.git</connection>
         <developerConnection>scm:git:git@github.com:marokanu/sfg-pet-clinic.git</developerConnection>
         <url>https://github.com/marokanu/sfg-pet-clinic.git</url>
-    <tag>sfg-pet-clinic-0.0.5</tag>
   </scm>
 
 </project>
